--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,3 @@
-
 body{
   margin: 0;
   text-align: center;
@@ -9,13 +8,20 @@ body{
 
 
 h1{
-margin-top: 0;
+margin: 50px auto 0 auto;
+font-size: 5.625rem;
 font-family: 'Sacramento', cursive;
+color: #66BFBF;
+
 }
 
 h2{
+  font-size: 2.5rem;
   font-family: 'Montserrat', sans-serif;
+  margin: 50px;
+  color: #66BFBF;
 }
+
 .top-container{
   background-color: #6FDFDF;
   padding-top: 100px;
@@ -38,12 +44,14 @@ h2{
   position: absolute;
   left: 300px;
   bottom: 300px;
+  width: 150px;
 }
 
 .top-cloud{
   position: absolute;
   right: 300px;
   top: 50px;
+  width: 150px;
 }
 
 img{
